Correct font-argin to text-align in h1 styles
Fix typo in h1 style property.

--- a/style.css
+++ b/style.css
@@ -2,5 +2,5 @@
     visibility: hidden;
 }
 h1{font-size: 110px;
-  font-argin: center
+  font-argin: center;
   }
